Se agrego otro boton

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
 					<a href="">Click here</a>
 				</button>
 			</div>
+			<div>
+				<button>
+					<a href="" class="clasic">Join us</a>
+				</button>
+			</div>
 		</header>
 	</body>
 </html>
